--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -82,7 +82,7 @@
                     <i class="fas fa-cog fa-2x p-1 f-button-color"></i>
                 </div>
             </div>
-            <ul class="nav nav-tabs mb-2">
+            <ul class="nav nav-tabs mt-2 mb-2">
                 <li class="nav-item">
                     <a class="nav-link active" href="for-you.html">For you</a>
                 </li>
@@ -111,7 +111,7 @@
 
                 </li>
                 <li class="list-group-item d-flex align-items-start">
-                    <div class="left-child w-75">
+                    <div class="left-child w-85">
                         <span class="f-border-color">Web Development</span>
                         <span class="row"></span>
                         <span>
@@ -124,13 +124,13 @@
                             build
                             Single Page Applications of SPAs</span>
                     </div>
-                    <div class="right-child w-25">
+                    <div class="right-child w-15">
                         <img src="images/react.png" class="img-fluid" alt="tesla">
                     </div>
                 </li>
 
                 <li class="list-group-item d-flex align-items-start">
-                    <div class="left-child w-75">
+                    <div class="left-child w-85">
 
                         <span>
                             <span class="fw-bold">JavaScript</span>
@@ -143,13 +143,13 @@
                         <span class="row"></span>
                         <span class="f-border-color">123K Tweets</span>
                     </div>
-                    <div class="right-child w-25">
+                    <div class="right-child w-15">
                         <img src="images/javascript.jpg" class="img-fluid round" alt="tesla">
                     </div>
                 </li>
 
                 <li class="list-group-item d-flex align-items-start">
-                    <div class="left-child w-75">
+                    <div class="left-child w-85">
                         <span class="f-border-color">Web Development</span>
                         <span class="row"></span>
                         <span>
@@ -158,13 +158,13 @@
                         <span class="row"></span>
                         <span class="f-border-color">123K Tweets</span>
                     </div>
-                    <div class="right-child w-25">
+                    <div class="right-child w-15">
                         <img src="images/jquery.png" class="img-fluid" alt="tesla">
                     </div>
                 </li>
 
                 <li class="list-group-item d-flex align-items-start">
-                    <div class="left-child w-75">
+                    <div class="left-child w-85">
                         <span class="f-border-color">Web Development</span>
                         <span class="row"></span>
                         <span>
@@ -175,7 +175,7 @@
                         <span class="row"></span>
                         <span class="f-border-color">123K Tweets</span>
                     </div>
-                    <div class="right-child w-25">
+                    <div class="right-child w-15">
                         <img src="images/nodejs.png" class="img-fluid" alt="tesla">
                     </div>
                 </li>
