--- a/public/tuiter/explore-light.html
+++ b/public/tuiter/explore-light.html
@@ -16,17 +16,17 @@
             crossorigin="anonymous"></script>
 
 </head>
-<body class="primary-bg-color">
+<body>
 <div class="container mt-2 mb-2">
     <div class="row">
-        <div class="col-sm-2">
-            <div class="list-group primary-bg-color f-font-color">
-                <a href="#!" class="list-group-item list-group-item-action primary-bg-color f-font-color">
+        <div class="col-sm-2 ">
+            <div class="list-group">
+                <a href="#!" class="list-group-item list-group-item-action">
                     <i class="fab fa-twitter"></i>
 
 
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action primary-bg-color f-font-color">
+                <a href="#!" class="list-group-item list-group-item-action">
                     <i class="fas fa-home"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Home</span>
                 </a>
@@ -34,32 +34,32 @@
                     <i class="fas fa-hashtag"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Explore</span>
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action primary-bg-color f-font-color ">
+                <a href="#!" class="list-group-item list-group-item-action">
                     <i class="fas fa-bell"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Notifications</span>
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action primary-bg-color f-font-color ">
+                <a href="#!" class="list-group-item list-group-item-action">
                     <i class="fas fa-envelope"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Messages</span>
                 </a>
                 <a href="#!"
-                   class="list-group-item list-group-item-action primary-bg-color f-font-color ">
+                   class="list-group-item list-group-item-action">
                     <i class="fas fa-bookmark"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Bookmarks</span>
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action primary-bg-color f-font-color ">
+                <a href="#!" class="list-group-item list-group-item-action">
                     <i class="fas fa-list"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Lists</span>
 
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action primary-bg-color f-font-color ">
+                <a href="#!" class="list-group-item list-group-item-action">
                     <i class="fas fa-user"></i>
                     <span class="d-none d-l-inline-block d-xl-inline-block">Profile</span>
                 </a>
-                <a href="#!" class="list-group-item list-group-item-action primary-bg-color f-font-color ">
+                <a href="#!" class="list-group-item list-group-item-action">
                     <span class="fa-stack fa-1x more-icon">
                         <i class="fas fa-circle fa-stack-1x"></i>
-                        <i class="fas fa-ellipsis-h fa-stack-1x fa-inverse ellipsis-small f-background-color"></i>
+                        <i class="fas fa-ellipsis-h fa-stack-1x fa-inverse ellipsis-small"></i>
                     </span>
                     <span class="d-none d-l-inline-block d-xl-inline-block">More</span>
                 </a>
@@ -68,112 +68,87 @@
                 </a>
             </div>
         </div>
-        <div class="col-md-10 col-lg-7 p-0 custom-border">
+        <div class="col-md-10 col-lg-7 ">
             <div class="row">
                 <div class="col-11">
-                    <div class="input-group border ms-2 rounded-pill border-bg-color secondary-color border-0">
-                        <span class="input-group-text bg-transparent border-0 secondary-color">
+                    <div class="input-group border rounded-pill">
+                        <span class="input-group-text bg-transparent border-0">
                             <i class="fas fa-search"></i>
                         </span>
                         <input type="text" placeholder="Search Twitter" class="form-control bg-transparent border-0">
                     </div>
                 </div>
                 <div class="col-1">
-                    <i class="fas fa-cog fa-1x p-1 secondary-color lh-lg"></i>
+                    <i class="fas fa-cog fa-2x p-1 f-button-color"></i>
                 </div>
             </div>
-            <ul class="nav nav-tabs border-color mt-2 mb-0 border-0 d-flex justify-content-between">
-                <li class="nav-item  border-color">
-                    <a class="nav-link border-color fw-bolder" href="for-you.html">For you</a>
+            <ul class="nav nav-tabs mt-2 mb-2">
+                <li class="nav-item">
+                    <a class="nav-link active" href="for-you.html">For you</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link border-color fw-bolder" href="trending.html">Trending</a>
+                    <a class="nav-link" href="trending.html">Trending</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link border-color fw-bolder" href="news.html">News</a>
+                    <a class="nav-link" href="news.html">News</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link border-color fw-bolder" href="sports.html">Sports</a>
+                    <a class="nav-link" href="sports.html">Sports</a>
                 </li>
-                <li class="nav-item active-tab-border">
-                    <a class="nav-link border-color fw-bolder active" href="entertainment.html">
-                        <span class="">
-                            Entertainment
-                        </span>
-                    </a>
+                <li class="nav-item">
+                    <a class="nav-link" href="entertainment.html">Entertainment</a>
                 </li>
             </ul>
 
 
             <ul class="list-group border-0">
-                <li class="list-group-item primary-bg-color border-0 m-0 p-0">
+                <li class="list-group-item border-0 m-0 p-0">
                     <div class="position-relative text-white">
-                        <img src="images/light-art.jpg" class="img-fluid" alt="tesla">
-                        <div class="position-absolute text-in-image">
-                            <span>Music | Last Night</span><br>
-                            <span class="fw-bold fs-2"> BTS and Coldplay release their new song, My universe
-                                <img src="images\saturn.png" class="img-fluid width-35p">
-                            </span>
-                        </div>
+                        <img src="images/spacex.jpg" class="img-fluid" alt="tesla">
+                        <div class="fw-bold fs-2 position-absolute text-in-image">SpaceX's
+                            Starship</div>
                     </div>
 
                 </li>
-                <li class="list-group-item d-flex align-items-start primary-bg-color secondary-color">
+                <li class="list-group-item d-flex align-items-start">
                     <div class="left-child w-85">
-
-                        <span class="border-color ">Trending in R&B & Soul</span>
+                        <span class="f-border-color">Web Development</span>
                         <span class="row"></span>
                         <span>
-                            <span class="fw-bold">R Kelly</span>
+                            <span class="fw-bold">ReactJS</span>
                             <i class="fas fa-check-circle ml-2"></i>
+                            <small class="f-border-color">- 2h</small>
                         </span>
                         <span class="row"></span>
-                        <span class="border-color">18.2 K Tweets</span>
-
+                        <span class="fw-bold">ReactJS is a component based front-end library that makes it very easy to
+                            build
+                            Single Page Applications of SPAs</span>
                     </div>
                     <div class="right-child w-15">
-                        <i class="fas fa-ellipsis-h ml-2  float-end"></i>
+                        <img src="images/react.png" class="img-fluid" alt="tesla">
                     </div>
                 </li>
 
-
-                <li class="list-group-item d-flex align-items-start primary-bg-color secondary-color">
-                    <div class="left-child w-85">
-
-                        <span class="border-color ">Trending in R&B & Soul</span>
-                        <span class="row"></span>
-                        <span>
-                            <span class="fw-bold">Chole</span>
-                            <i class="fas fa-check-circle ml-2"></i>
-                        </span>
-                        <span class="row"></span>
-                        <span class="border-color">Trending with <span class="ternary-color">Halle</span></span>
-
-                    </div>
-                    <div class="right-child w-15">
-                        <i class="fas fa-ellipsis-h ml-2  float-end"></i>
-                    </div>
-                </li>
-
-                <li class="list-group-item d-flex align-items-start primary-bg-color secondary-color">
+                <li class="list-group-item d-flex align-items-start">
                     <div class="left-child w-85">
 
                         <span>
-                            <span class="fw-bold">The Times</span>
+                            <span class="fw-bold">JavaScript</span>
                             <i class="fas fa-check-circle ml-2"></i>
-                            <small class="f-border-color">- September 24, 2021</small>
+                            <small class="f-border-color">- 2h</small>
                         </span>
                         <span class="row"></span>
-                        <span class="fw-bold">Stanley Tucci: 'Food or sex? That's the cruellest question...'</span>
+                        <span class="fw-bold">JavaScript is a programming language that can run on browsers as
+                            well as on desktops</span>
                         <span class="row"></span>
                         <span class="f-border-color">123K Tweets</span>
                     </div>
                     <div class="right-child w-15">
-                        <img src="images/john.jpg" class="img-fluid round" alt="tesla">
+                        <img src="images/javascript.jpg" class="img-fluid round" alt="tesla">
                     </div>
                 </li>
 
-                <li class="list-group-item d-flex align-items-start primary-bg-color secondary-color">
+                <li class="list-group-item d-flex align-items-start">
                     <div class="left-child w-85">
                         <span class="f-border-color">Web Development</span>
                         <span class="row"></span>
@@ -188,7 +163,7 @@
                     </div>
                 </li>
 
-                <li class="list-group-item d-flex align-items-start primary-bg-color secondary-color">
+                <li class="list-group-item d-flex align-items-start">
                     <div class="left-child w-85">
                         <span class="f-border-color">Web Development</span>
                         <span class="row"></span>
@@ -208,53 +183,80 @@
             </ul>
         </div>
         <div class="col-lg-3 d-lg-block d-sm-none">
-            <ul class="list-group border-bg-color secondary-color">
-                <li class="list-group-item border-bg-color secondary-color">
+            <ul class="list-group">
+                <li class="list-group-item">
                     <span class="recomm-name fw-bold">Who to follow</span>
                 </li>
-
-                <li class="list-group-item border-bg-color secondary-color">
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-sm-3 p-0">
+                            <img src="images/java.jpg" class="rounded-circle img-fluid w-75">
+                        </div>
+                        <div class="col-sm-9  recomm-text p-0">
+                            <span class="recomm-name fw-bold">Java</span>
+                            <i class="fas fa-check-circle"></i>
+                            <span class="recomm-tag d-block">@Java</span>
+                        </div>
+                        <button type="button" class="btn rounded-pill my-btn follow-btn">Follow</button>
+                    </div>
+                </li>
+                <li class="list-group-item">
                     <div class="row">
                         <div class="col-sm-3 p-0">
                             <img src="images/relativity.png" class="rounded-circle img-fluid w-75">
                         </div>
                         <div class="col-sm-9 p-0 recomm-text">
-                            <span class="recomm-name fw-bold ">The Babylon Bee</span>
+                            <span class="recomm-name fw-bold ">Relativity Space</span>
                             <i class="fas fa-check-circle nowrap"></i>
-                            <span class="recomm-tag d-block">@TheBabylonBee</span>
+                            <span class="recomm-tag d-block">@relativityspace</span>
                         </div>
                         <button type="button" class="btn rounded-pill my-btn follow-btn">Follow</button>
                     </div>
                 </li>
 
-                <li class="list-group-item border-bg-color secondary-color">
+                <li class="list-group-item">
                     <div class="row">
                         <div class="col-sm-3 p-0">
-                            <img src="images/profile.jpg" class="rounded-circle img-fluid w-75">
+                            <img src="images/virgin.png" class="rounded-circle img-fluid w-75">
                         </div>
                         <div class="col-sm-9 p-0 recomm-text">
-                            <span class="recomm-name fw-bold ">Jack Posobiec</span>
+                            <span class="recomm-name fw-bold ">Virgin Galactic</span>
                             <i class="fas fa-check-circle nowrap"></i>
-                            <span class="recomm-tag d-block">@JackPosobiec</span>
+                            <span class="recomm-tag d-block">@virgingalactic</span>
                         </div>
                         <button type="button" class="btn rounded-pill my-btn follow-btn">Follow</button>
                     </div>
                 </li>
 
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-sm-3 p-0">
+                            <img src="images/nasa.png" class="rounded-circle img-fluid w-75">
+                        </div>
+                        <div class="col-sm-9 p-0 recomm-text">
+                            <span class="recomm-name fw-bold ">NASA</span>
+                            <i class="fas fa-check-circle nowrap"></i>
+                            <span class="recomm-tag d-block">@nasa</span>
+                        </div>
+                        <button type="button" class="btn rounded-pill my-btn follow-btn">Follow</button>
+                    </div>
+                </li>
 
-
-                <li class="list-group-item border-bg-color secondary-color">
-                    <span class="recomm-name fw-bold ternary-color">Show more</span>
+                <li class="list-group-item">
+                    <div class="row">
+                        <div class="col-sm-3 p-0">
+                            <img src="images/tesla.jpg" class="rounded-circle img-fluid w-75">
+                        </div>
+                        <div class="col-sm-9 p-0 recomm-text">
+                            <span class="recomm-name fw-bold ">Tesla</span>
+                            <i class="fas fa-check-circle"></i>
+                            <span class="recomm-tag d-block">@tesla</span>
+                        </div>
+                        <button type="button" class="btn rounded-pill my-btn follow-btn">Follow</button>
+                    </div>
                 </li>
 
             </ul>
-            <small class="secondary-color">Terms of Service</small>
-            <small class="secondary-color">Privacy Policy</small>
-            <small class="secondary-color">Cookie Policy</small>
-            <small class="row"></small>
-            <small class="secondary-color">Ads info</small>
-            <small class="secondary-color">More ...</small>
-            <small class="secondary-color">&copy; 2021 Twitter, Inc.</small>
         </div>
     </div>
 </div>
