--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -64,7 +64,7 @@
                     <span class="d-none d-l-inline-block d-xl-inline-block">More</span>
                 </a>
                 <a href="#!">
-                    <button type="button" class="btn mt-1 rounded-pill w-100 my-btn">Tweet</button>
+                    <button type="button" class="btn mt-1 rounded-pill w-100 my-btn ternary-bg-color">Tweet</button>
                 </a>
             </div>
         </div>
@@ -75,7 +75,8 @@
                         <span class="input-group-text bg-transparent border-0 secondary-color">
                             <i class="fas fa-search"></i>
                         </span>
-                        <input type="text" placeholder="Search Twitter" class="form-control bg-transparent border-0">
+                        <input type="text" placeholder="Search Twitter"
+                               class="form-control bg-transparent secondary-color border-0">
                     </div>
                 </div>
                 <div class="col-1">
@@ -118,7 +119,7 @@
                     </div>
 
                 </li>
-                <li class="list-group-item d-flex align-items-start primary-bg-color secondary-color">
+                <li class="list-group-item d-flex align-items-start primary-bg-color secondary-color  border-1">
                     <div class="left-child w-85">
 
                         <span class="border-color ">Trending in R&B & Soul</span>
@@ -223,7 +224,7 @@
                             <i class="fas fa-check-circle nowrap"></i>
                             <span class="recomm-tag d-block">@TheBabylonBee</span>
                         </div>
-                        <button type="button" class="btn rounded-pill my-btn follow-btn">Follow</button>
+                        <button type="button" class="btn rounded-pill follow-btn">Follow</button>
                     </div>
                 </li>
 
@@ -237,7 +238,7 @@
                             <i class="fas fa-check-circle nowrap"></i>
                             <span class="recomm-tag d-block">@JackPosobiec</span>
                         </div>
-                        <button type="button" class="btn rounded-pill my-btn follow-btn">Follow</button>
+                        <button type="button" class="btn rounded-pill follow-btn">Follow</button>
                     </div>
                 </li>
 
