text typer updated

--- a/public/tuiter/explore.html
+++ b/public/tuiter/explore.html
@@ -76,7 +76,7 @@
                             <i class="fas fa-search"></i>
                         </span>
                         <input type="text" placeholder="Search Twitter"
-                               class="form-control bg-transparent secondary-color border-0">
+                               class="form-control bg-transparent secondary-color border-0 white-type">
                     </div>
                 </div>
                 <div class="col-1">
