--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,17 @@
       <li><a href="labs/a3/css/index.html">Assignment 3 Labs</a></li>
       <li><a href="labs/a3/challenge/index.html">Assignment 3 Challenge</a></li>
       <li><a href="labs/a4/bootstrap/index.html">Assignment 4</a></li>
+      <li>
+        Assignment 5
+        <ul>
+          <li>
+            <a href="labs/a5/js/index.html">Assignment 5</a>
+          </li>
+          <li>
+            <a href="labs/a5/todos/index.html">ToDo</a>
+          </li>
+        </ul>
+      </li>
       <li><a href="tuiter/navigation.html">Tuiter</a></li>
     </ul>
 
