--- a/public/tuiter/ExploreScreen/explore.html
+++ b/public/tuiter/ExploreScreen/explore.html
@@ -6,6 +6,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet"/>
     <link href="../../vendors/bootstrap/bootstrap.min.css" rel="stylesheet"/>
+<!--    rel="stylesheet"-->
     <link href="explore.css" rel="stylesheet"/>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <meta charset="UTF-8">
@@ -13,6 +14,8 @@
 </head>
 <body>
 <div class="container" id="wd-explore"></div>
-<script src="ExploreScreen.js" type="module"></script>
+<!--<script src="ExploreScreen.js" type="module"></script>-->
+<script src="../../../public/tuiter/ExploreScreen/ExploreScreen.js" type="module"></script>
+
 </body>
 </html>
