--- a/public/tuiter/ExploreScreen/explore.html
+++ b/public/tuiter/ExploreScreen/explore.html
@@ -15,7 +15,7 @@
 <body>
 <div class="container" id="wd-explore"></div>
 <!--<script src="ExploreScreen.js" type="module"></script>-->
-<script src="../../../public/tuiter/ExploreScreen/ExploreScreen.js" type="module"></script>
+<script src="ExploreScreen.js" type="module"></script>
 
 </body>
 </html>
