--- a/public/tuiter/home.html
+++ b/public/tuiter/home.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="navigation.html">Back</a>
-<h1>Tuiter</h1>
+<h1>Index</h1>
 <h2>Home</h2>
 <img src="images/profile.jpg" width="48px" height="48px" alt="profile-pic">
 <form id="textarea">
