--- a/public/index.html
+++ b/public/index.html
@@ -42,8 +42,8 @@
 
     <h3>Non-react Assignments</h3>
     <ul>
-      <li><a href="labs/a2/index.html">Assignment 2 Labs</a></li>
-      <li><a href="labs/a3/css/index.html">Assignment 3 Labs</a></li>
+      <li><a href="labs/a2/index.html">Assignment 2 Index</a></li>
+      <li><a href="labs/a3/css/index.html">Assignment 3 Index</a></li>
       <li><a href="labs/a3/challenge/index.html">Assignment 3 Challenge</a></li>
       <li><a href="labs/a4/bootstrap/index.html">Assignment 4</a></li>
       <li>
@@ -57,7 +57,7 @@
           </li>
         </ul>
       </li>
-      <li><a href="tuiter/navigation.html">Tuiter</a></li>
+      <li><a href="tuiter/navigation.html">Index</a></li>
     </ul>
 
   </body>
