--- a/public/tuiter/edit-profile.html
+++ b/public/tuiter/edit-profile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="profile.html">Back</a>
-<h1>Tuiter</h1>
+<h1>Index</h1>
 <h2>Edit Profile</h2>
 <a href="profile.html">Save</a>
 <img src="images/banner.png" width="100%" height="200px"> <br/>
