--- a/public/tuiter/profile.html
+++ b/public/tuiter/profile.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <a href="navigation.html">Back</a>
-<h1>Tuiter</h1>
+<h1>Index</h1>
 <h2>Profile</h2>
 <img src="images/banner.png" width="100%" height="200px">
 <img src="images/profile.jpg" width="48px" height="48px">
