--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
           </li>
         </ul>
       </li>
-      <li><a href="tuiter/navigation.html">Index</a></li>
+      <li><a href="tuiter/navigation.html">Tuiter Index</a></li>
     </ul>
 
   </body>
