--- a/public/index.html
+++ b/public/index.html
@@ -40,25 +40,25 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
 
-    <h3>Non-react Assignments</h3>
-    <ul>
-      <li><a href="labs/a2/index.html">Assignment 2 Index</a></li>
-      <li><a href="labs/a3/css/index.html">Assignment 3 Index</a></li>
-      <li><a href="labs/a3/challenge/index.html">Assignment 3 Challenge</a></li>
-      <li><a href="labs/a4/bootstrap/index.html">Assignment 4</a></li>
-      <li>
-        Assignment 5
-        <ul>
-          <li>
-            <a href="labs/a5/js/index.html">Assignment 5</a>
-          </li>
-          <li>
-            <a href="labs/a5/todos/index.html">ToDo</a>
-          </li>
-        </ul>
-      </li>
-      <li><a href="tuiter/navigation.html">Tuiter Index</a></li>
-    </ul>
+<!--    <h3>Non-react Assignments</h3>-->
+<!--    <ul>-->
+<!--      <li><a href="labs/a2/index.html">Assignment 2 Index</a></li>-->
+<!--      <li><a href="labs/a3/css/index.html">Assignment 3 Index</a></li>-->
+<!--      <li><a href="labs/a3/challenge/index.html">Assignment 3 Challenge</a></li>-->
+<!--      <li><a href="labs/a4/bootstrap/index.html">Assignment 4</a></li>-->
+<!--      <li>-->
+<!--        Assignment 5-->
+<!--        <ul>-->
+<!--          <li>-->
+<!--            <a href="labs/a5/js/index.html">Assignment 5</a>-->
+<!--          </li>-->
+<!--          <li>-->
+<!--            <a href="labs/a5/todos/index.html">ToDo</a>-->
+<!--          </li>-->
+<!--        </ul>-->
+<!--      </li>-->
+<!--      <li><a href="tuiter/navigation.html">Tuiter Index</a></li>-->
+<!--    </ul>-->
 
   </body>
 </html>
